--- a/css/common.css
+++ b/css/common.css
@@ -118,6 +118,12 @@ body{
     display: block;
 }
 
+.container{
+    width: 1220px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
  @media (max-width: 576px) { 
     .header{
         position: fixed;
@@ -131,23 +137,82 @@ body{
     .bar{
         display: block;
         margin-left: 16px;
+        z-index: 2;
     }
 
-    .gnb{
+    .gnb {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background-color: #333;
+        color: #ddd;
+        display: initial;
+        overflow-y: scroll;
+        padding: 60px 0;
+        z-index: 1;
+        transition: all 0.3s;
+    }
+
+    .gnb.active{
+        left: 0%;
+       
+    }
+
+    .gnb > li{
+        border-bottom: 1px solid rgba(255,255,255,0.2);
+        padding-bottom: 16px;
+    }
+
+    .gnb > li > a{
+        height: 60px;
+        line-height: 60px;
+        padding: 0 30px;
+        font-size: 20px;
+        font-weight: 600;
+        position: relative;
+    }
+
+    .gnb > li > a::after{
+        content: '+';
+        position: absolute;
+        right: 30px;
+        top: 0px;
+    }
+    
+    .gnb > li.on > a::after {
+        content: '-';
+    }
+
+    .gnb > li > a span::after{
+       display: none;
+    }
+    
+
+    .gnb ul{
+        position: initial;
+        top: initial;
+        width: initial;
+        height: auto;
+        border: none;
+        padding: 0 30px;
         display: none;
     }
 
+ 
+    
+    .gnb ul a{
+        display: block;
+        padding: 8px 0;
+    }
+
     .extra{
-        display: flex;
         gap: 0px;
         margin-right: 16px;
     }
 
     .logo{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
         width: 56px;
     }
  }
