--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,11 @@
     font-size: 20px;
 }
 
+/* section2 */
+.swiper_01 .swiper-slide{
+    height: 300px;
+}
+
 
 @media (max-width: 576px) { 
     .hero{
