--- a/css/common.css
+++ b/css/common.css
@@ -20,6 +20,12 @@ a{
     color: inherit;
 }
 
+/* 모바일 기기에서 수평 스크롤 없애기 */
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     font-family: 'Noto Sans KR', sans-serif;
     line-height: 1.4;
